# RexDD

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
developers/: README.md
src/: .editorconfig  CMakeLists.txt  README.txt  TODO.txt  computing.c  computing.h  config.h.in  error.c  error.h  forest.c  forest.h  functions.c  functions.h  helpers.c  helpers.h  nodeman.c  nodeman.h  nodepage.c  nodepage.h  operation.c  operation.h  packed.h  parser.c  parser.h  rexdd.c  rexdd.h  unique.c  unique.h  unpacked.c  unpacked.h
src/hash/: .gitignore  Makefile  findmults.c  findprimes.c  showmults.c
src/old/: forest.c  rexdd.h
src/tests/: .gitignore  Makefile  check_ut.c  storage.c
tests/: CMakeLists.txt  check_and.c  check_bdds.c  check_bench_marks.c  check_endgame.c  check_eval.c  check_forest.c  check_np.c  check_pack.c  check_qbdd.c  check_reduce.c  check_ut.c  concretizing.c  osm.c  packing.c  restr.c  sampling.c  tsm.c
